# worlds-worst-serverless

./: .coveragerc  .gitignore  .travis.yml  Pipfile  README.md  docker-compose.yml  pyproject.toml
api/: api.py
dockerfiles/: Dockerfile-API  Dockerfile-Tests
find_interesting_things/: find_interesting_things.py
tests/: abilities.json  test_api_gateway.py  test_worlds_worst_combat.py  test_worlds_worst_operator.py
worlds_worst_serverless/api_gateway/: api.py  router.py
worlds_worst_serverless/api_gateway/templates/: gateway.html
worlds_worst_serverless/find-interesting-things/: handler.py  serverless.yml
worlds_worst_serverless/frontend/: package-lock.json  package.json
worlds_worst_serverless/frontend/public/: index.html
worlds_worst_serverless/frontend/src/: App.vue  main.js
worlds_worst_serverless/machine-learning-package/: README.md  handler.py  package-lock.json  package.json  requirements.txt  serverless.yml
worlds_worst_serverless/worlds-worst-combat/: combat_effects.py  combat_utilities.py  handler.py  serverless.yml
worlds_worst_serverless/worlds_worst_auth/: authenticator.py  database_ops.py  package-lock.json  package.json  serverless.yml
worlds_worst_serverless/worlds_worst_combat/: README.md  abilities.json  combat_effects.py  combat_utilities.py  handler.py  package-lock.json  package.json  serverless.yml
worlds_worst_serverless/worlds_worst_frontend/: README.md  package-lock.json  package.json  serverless.yml
worlds_worst_serverless/worlds_worst_mapper/: guidelines.py  mapper.py  serverless.yml
worlds_worst_serverless/worlds_worst_operator/: actions.py  combat_actions.py  common_actions.py  database_ops.py  default_players.json  handler.py  home_actions.py  operator.py  package-lock.json  package.json  player_data.py  requirements.txt  serverless.yml
worlds_worst_serverless/worlds_worst_story_writer/: handler.py  requirements.txt  serverless.yml
worlds_worst_serverless/worlds_worst_writer/: handler.py  package-lock.json  serverless.yml
(+10 files in other folders)
